[package]
name = "solana-lumberjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo = { version = "1.1.1", package = "turbo-genesis-sdk", features = ["solana"] }
lumberjack = { version = "*", package = "lumberjack", path = "./solana" }

[patch.crates-io]
cc = { git = "https://github.com/jozanza/cc-rs.git", branch = "wasm-patch" }

[lib]
crate-type = ["cdylib"]
